Create 1st box and center it

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="fuck-you-world">
+        Fuck you world
+    </div>
 </body>
 </html>
