--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <div class="fuck-you-world">
         Fuck you world
     </div>
+    
+    <div class="fuck-box1">
+        Fuck you world
+    </div>
+    <div class="fuck-box2">
+        Fuck you world
+    </div>
+    
 </body>
 </html>
